# TBL

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: README.md  benchmark_core.py  benchmark_gpu_crossover.py  results_1_2_0.json  results_2_0_0.json  results_gpu_1_2_0.json
benchmarks/results/: README.md  results_2_1_0.json  results_2_2_0.json
docs/: physics-model.md  reproducibility.md  validation-report.md
examples/: README.md  calibrate_experiment.py  coherent_timebin_loop.py  exact_partial_distinguishability.py  fiber_loop_twin.py  hom_scan.py  realistic_digital_twin.py  time_bin_control.py
examples/hardware/: realistic_digital_twin.py  time_bin_control.py
examples/interference/: heralded_spdc_hom.py  quantum_dot_hom.py
examples/research/: calibrate_experiment.py  research_bundle.py
examples/sources/: spdc_heralding.py
src/openphotontwin/: __init__.py  adapters.py  backends.py  calibration.py  circuit.py  components.py  detectors.py  errors.py  experiments.py  models.py  simulator.py  timebin.py
src/tbl/: __init__.py  _runtime.py  _version.py  adapters.py  backends.py  calibration.py  circuit.py  components.py  detectors.py  errors.py  experiments.py  models.py  research.py  simulator.py  sources.py  timebin.py
tests/: test_adapters_backends.py  test_calibration.py  test_circuit.py  test_hardware.py  test_models.py  test_namespace.py  test_research.py  test_runtime.py  test_sources.py  test_timebin.py  test_validation.py
