[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbl"
version = "2.0.0"
description = "TBL: time-bin and fiber-loop quantum photonics digital twin"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "TBL contributors"}]
keywords = ["quantum-photonics", "time-bin", "fiber-loop", "HOM", "SNSPD", "simulation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x[ctk]>=13"]
gpu-cuda11 = ["cupy-cuda11x[ctk]>=13"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/ht13255/TBL"
Documentation = "https://github.com/ht13255/TBL#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
